@@ -1,5 +1,13 @@
 2001-04-12  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (Language): Add attribute `_finish'.
+	(&finish): New.
+	(Automake): Adjust.
+	(&lang_header_finish, &lang_yaccxx_finish, &lang_lexxx_finish)
+	(&lang_asm_finish): Remove.
+
+2001-04-12  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (Language): Add attribute `extensions'.
 	(Automake): Pass a hash to `&register_language' instead of a
 	list of pseudo assignments.
